# Change log

## Changed simulations to return mating events

22nd August 2023

On revising the manuscript it is difficult to compare the simulations to the
real data, because the former calculate things about individuals while the latter
focusses on mating events (paternity of whole sibships). The simulations also
save summary statistics, but I keep changing my mind about what to report.

I changed it up to instead focus on tables of correct and inferred mating events,
and merge the two. From this I will be able to calculate false positive/negative
error rates and family sizes.

## Change simulations to calculate error rates

13th July 2023

I want to change the simulations to calculate how reliable paternity is when
there are missing fathers. 

The most likely father for a single offspring can be the real father (F), an 
unrelated father (U), or a missing father (M). Then we want to know:
* P(F|F) that the true father is the most likely given that he is present
* P(U|F) that an unrelated father is the most likely, when F is present
* P(M|F) that a father is assigned missing when he is present
* P(M|M) that a missing father is correctly assigned as missing
* P(U|M) that an unrelated father is the most likely, when F is not sampled

I added calculation of P(F|F) to the simulations.
I realised that they already calculate P(M|F), and P(U|F) = 1- P(F|F) - P(M|F).
I can get P(M|M) and P(U|M) from the numbers of orphans, also already in the code.

Also repeated the inference of mating events using only 500 iterations as
burnin.

## Tidy MCMC analyses

13th July 2023

Simplified the folder of MCMC results.

* Removed the analyses using missing fathers = 0.22 and 0.42
* Changed 04_no_mixture to 02_no_mixture
* Removed all the output files, because tracking them will really slow down the
git repo...

## Fiddling

Minor formatting changes.

Tried plotting things with and without singletons families.

Corrected paths to MCMC results

## no_mixture MCMC with q=0.5
