@@ -2,7 +2,7 @@ Power analysis simulations.
 
 This simulates mating events between mothers and real candidate father
 genotypes, and generates families of full siblings of the same sizes as in 
-the real data set. This then runs FAPS functions on those data and returns
-probabilities of paternity for true sires based on paternity alone, after
-clustering into sibships, and after clustering including information about
-dispersal.
+the real data set.
+
+See the Python script for details of the analysis, and job submission script
+to run it as a SLURM job on an HPC.
