@@ -1,5 +1,12 @@
 # Change log
 
+## Tidied simulations
+
+6th October 2023
+
+Tidied up simulations folder to keep only the files for the most recent analysis
+looking at different priors on missing fathers.
+
 ## Changed simulations to return mating events
 
 22nd August 2023
